# DTW

./: .gitignore  DP_approx_match.py  README.md  dynamic_programming.py  experiments.sh  local_DTW.py  setup.cfg
data/: README.md  ecoli_10kb.fa
data/badread/: README.md
data/nanosim/: README.md  short_NC_000001_11.fasta
framed_DTW/: README.md  requirements.txt  setup.cfg
framed_DTW/src/dynamic_prog/: dynamic_programming.py  global_alignement.py  local_alignement.py
framed_DTW/src/experiments/: read.py
framed_DTW/src/frameDTW/: DTW_blocks.py  README.md
framed_DTW/src/read/: experiment.py  plot.py  read.py  read_generator.py
framed_DTW/tests/: progress_bar.py  timer.py  validation.py
src/BlockDTW/: DTW_blocks.py  DTW_nmk.py  README.md  block.py  border_block.py
src/dynamic_prog/: global_alignement.py  local_alignement.py  pattern_matching.py
src/experiments/: plot.py  read_generator.py
src/frameDTW/: DTW_blocks.py  README.md  block.py
tests/: time_diff_set.py  validation.py
