[metadata]
name = frameDTW
description = 'Computes a DTW matrix via efficient dynamic programming'
author = 'Pierre Peterlongo, Garance Gourdel'
email = 'pierre.peterlongo@inria.fr, garance.gourdel@inria.fr'

[options]
install_requires =
    pysam>=0.19
    matplotlib>=3.5.2
package_dir =
    =src
packages=find:

[options.packages.find]
where=src
